--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
     gap: 1rem;
+    width: 80%;
 }
 
 .card-container{
@@ -70,4 +71,9 @@ body{
 
 .title:hover{
     color: var(--main-color);
+}
+
+main{
+    display: flex;
+    justify-content: center;
 }
