--- a/style.css
+++ b/style.css
@@ -48,10 +48,12 @@ body{
 .card-title{
     font-family: 'Lobster', cursive;
     font-size: 1.5rem;
+    text-align: center;
 }
 .card-description{
     margin: 0;
     margin-bottom: 1rem;
+    text-align: center;
 
 }
 
