--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ body{
     border-style: solid;
     border-radius: 1rem;
     box-shadow: -0.25rem 0.5px 5px black;
+    transition: 0.2s;
 }
 
 .card-title{
@@ -61,6 +62,7 @@ body{
     background-color: #181818;
     border-color: var(--main-color);
     box-shadow: -0.25rem 0.5px 10px black;
+    transition: 0.2s;
 }
 
 .title{
@@ -69,10 +71,12 @@ body{
     margin: 1.5rem;
     text-decoration: none;
     color: #ffffff;
+    transition: 0.5s;
 }
 
 .title:hover{
     color: var(--main-color);
+    transition: 0.2s;
 }
 
 main{
